force-app/main/default/objects/sma__MATerritoryAggregationSetting__c/sma__MATerritoryAggregationSetting__c.object-meta.xml
<CustomObject>
    <label>MA Territory Aggregation Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Territory Aggregation Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>