force-app/main/default/objects/sma__MATerritoryAggregationSetting__c/fields/sma__MAMarkerLayer__c.field-meta.xml
<CustomField>
    <fullName>sma__MAMarkerLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Marker Layer</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>MA Territory Aggregation Settings</relationshipLabel>
    <relationshipName>MATerritoryAggregationSettings</relationshipName>
    <type>Lookup</type>
</CustomField>