force-app/main/default/objects/sma__MATerritoryAggregationSetting__c/fields/sma__MATerritoryLayer__c.field-meta.xml
<CustomField>
    <fullName>sma__MATerritoryLayer__c</fullName>
    <label>MapAnything Territory Layer</label>
    <referenceTo>sma__MALayer__c</referenceTo>
    <relationshipLabel>MA Territory Aggregation Settings</relationshipLabel>
    <relationshipName>MATerritoryAggregationSettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>