force-app/main/default/objects/sma__MATerritoryAggregationSetting__c/fields/sma__ValueField__c.field-meta.xml
<CustomField>
    <fullName>sma__ValueField__c</fullName>
    <label>Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>